jstree fixes (from github) jstree contect menu fix (z-index) jstree DnD debugging add "Reload" option to Project menu (remember filename for session)

--- a/openmdao.gui/src/openmdao/gui/static/js/jstree/themes/classic-dark/style.css
+++ b/openmdao.gui/src/openmdao/gui/static/js/jstree/themes/classic-dark/style.css
@@ -49,6 +49,8 @@
 .jstree-classic-dark a.jstree-search { color:aqua; }
 .jstree-classic-dark .jstree-locked a { color:silver; cursor:default; }
 
+.vakata-context { z-index: 99999 !important;}
+
 #vakata-contextmenu.jstree-classic-dark-context, 
 #vakata-contextmenu.jstree-classic-dark-context li ul { background:#f0f0f0; border:1px solid #979797; -moz-box-shadow: 1px 1px 2px #999; -webkit-box-shadow: 1px 1px 2px #999; box-shadow: 1px 1px 2px #999; }
 #vakata-contextmenu.jstree-classic-dark-context li { }
